目標時間まで盛り込み

--- a/src/web/index.html
+++ b/src/web/index.html
@@ -5,6 +5,13 @@
     <!-- CSP の設定 https://developer.mozilla.org/ja/docs/Web/HTTP/CSP -->
     <meta http-equiv="Content-Security-Policy" content="default-src 'self';" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+    async
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/semantic-ui@2/dist/semantic.min.css"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/semantic-ui-react/dist/umd/semantic-ui-react.min.js"></script>
+
     <title>Electron App</title>
   </head>
   <body>
