いろいろ整えた

--- a/src/web/index.html
+++ b/src/web/index.html
@@ -13,7 +13,7 @@
     />
     <script src="https://cdn.jsdelivr.net/npm/semantic-ui-react/dist/umd/semantic-ui-react.min.js"></script>
 
-    <title>Electron App</title>
+    <title>My Flex Timer</title>
   </head>
   <body>
     <!-- React アプリのマウントポイント -->
