--- a/src/web/index.html
+++ b/src/web/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <!-- CSP の設定 https://developer.mozilla.org/ja/docs/Web/HTTP/CSP -->
 
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self' https://cdn.jsdelivr.net https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com https://cdn.jsdelivr.net; style-src 'self' https://cdn.jsdelivr.net https://fonts.googleapis.com; " />
+    <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self' https://cdn.jsdelivr.net https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com https://cdn.jsdelivr.net; style-src 'self' https://cdn.jsdelivr.net https://fonts.googleapis.com; " /> -->
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' https://cdn.jsdelivr.net https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com https://cdn.jsdelivr.net data:; style-src 'self' https://cdn.jsdelivr.net https://fonts.googleapis.com; " />
+
 
     <link
     async
